test/conformance/kuttl/verifyImages/keyless-nomutatedigest-noverifydigest-norequired/01-manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyless-nomutatedigest-noverifydigest-norequired
spec:
  validationFailureAction: enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: check-builder-id-keyless
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "ghcr.io/chipzoller/zulu*"
        mutateDigest: false
        verifyDigest: false
        required: false
        attestors:
        - entries:
          - keyless:
              subject: "https://github.com/chipzoller/zulu/.github/workflows/slsa-generic-keyless.yaml@refs/tags/v*"
              issuer: "https://token.actions.githubusercontent.com"
