test/conformance/kuttl/verifyImages/keyless-nomutatedigest-noverifydigest-norequired/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: keyless-nomutatedigest-noverifydigest-norequired
status:
  ready: true
